# KaosEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: BasicShader.glsl  basicfragment.glsl  basicvertex.glsl
docs/: CONVENTIONS.md
docs/KaosEngine/Memory/: Memory.md  StackAllocator.md
include/: CMakeLists.txt
include/Core/: Engine.hpp  Window.hpp
include/ECS/: Components.h  Components.hpp  Entity.h  Entity.hpp  RenderSystem.h  RenderSystem.hpp  System.h  System.hpp  World.cpp  World.h
include/Managers/: AssetManager.h  AssetManager.hpp  SceneManager.h  SceneManager.hpp
include/Memory/: ArenaBasedAlloc.hpp  SizeBasedArena.hpp  StackAllocator.hpp  StackAllocatorContainer.hpp
include/Renderer/: Buffer.hpp  IndexBuffer.h  Renderer.hpp  Shader.hpp  Texture.h  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Scene/: Scene.h  Scene.hpp
include/Utils/: Logger.hpp  SlotMap.h  SlotMap.hpp
src/: CMakeLists.txt  main.cpp
src/Core/: Engine.cpp  Window.cpp
src/ECS/: Entity.cpp  RenderSystem.cpp  World.cpp
src/Managers/: AssetManager.cpp  SceneManager.cpp
src/Memory/: ArenaBasedAlloc.cpp  StackAllocator.cpp
src/Renderer/: Buffer.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Scene/: Scene.cpp
src/Utils/: Logger.cpp
vendors/: CMakeLists.txt
vendors/assimp/: CMakeLists.txt
vendors/entt/: CMakeLists.txt
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/glfw/: CMakeLists.txt
vendors/glm/: CMakeLists.txt
vendors/imgui/: CMakeLists.txt
vendors/stb/: CMakeLists.txt
